Added direction prior to include gravity measurement from IMU.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ add_library(slam3d
 	src/BoostGraph.cpp
 	src/PointCloudSensor.cpp
 	src/G2oSolver.cpp
+	src/g2o/edge_direction_prior.cpp
 )
 
 target_link_libraries(slam3d
