--- a/slam3d/sensor/pcl/CMakeLists.txt
+++ b/slam3d/sensor/pcl/CMakeLists.txt
@@ -1,6 +1,5 @@
 find_package(PCL 1.7 REQUIRED COMPONENTS registration)
 
-# Define core library
 add_library(sensor-pcl
 	PointCloudSensor.cpp
 )
@@ -13,7 +12,7 @@ target_include_directories(sensor-pcl
 )
 
 target_link_libraries(sensor-pcl
-	PUBLIC core
+	PUBLIC core ${PCL_REGISTRATION_LIBRARIES}
 )
 
 # Install header files
@@ -21,21 +20,22 @@ install(
 	FILES
 		PointCloudSensor.hpp
 		GICPConfiguration.hpp
-	DESTINATION include/slam3d
+	DESTINATION include/slam3d/sensor/pcl
 )
 
 # Install the binaries
-install(TARGETS sensor-pcl EXPORT sensor-pcl-targets
+install(TARGETS sensor-pcl EXPORT slam3d-targets
 	ARCHIVE DESTINATION lib
 	LIBRARY DESTINATION lib
 	RUNTIME DESTINATION bin
 )
 
-# Export the library interface
-install(EXPORT sensor-pcl-targets
-	NAMESPACE slam3d::
-	DESTINATION lib/cmake/slam3d
+# Install pkg-config file
+configure_file(slam3d_sensor_pcl.pc.in slam3d_sensor_pcl.pc @ONLY)
+install(
+	FILES ${PROJECT_BINARY_DIR}/slam3d/sensor/pcl/slam3d_sensor_pcl.pc
+	DESTINATION lib/pkgconfig
 )
 
 set_target_properties(sensor-pcl PROPERTIES OUTPUT_NAME slam3d_sensor_pcl)
-
+add_slam3d_library(slam3d_sensor_pcl)
