--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,7 @@ binaries:
      when: on_failure
      expire_in: 1 week
      paths:
-       - /opt/rock/install/log/
+       - /opt/rock/builds/
      
 
 pages:
