--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,7 @@ binaries:
    script:
    - aup
    - amake
+   - cat /opt/rock/install/log/../../builds/dfki-slam/slam3d-configure.log
    only:
    - master
    - devel
@@ -13,8 +14,7 @@ binaries:
      when: on_failure
      expire_in: 1 week
      paths:
-       - /builds/
-     
+       - /opt/rock/install/log/../../builds/     
 
 pages:
    stage: deploy
