--- a/slam3d/sensor/pcl/slam3d_sensor_pcl.pc.in
+++ b/slam3d/sensor/pcl/slam3d_sensor_pcl.pc.in
@@ -6,6 +6,6 @@ includedir=${prefix}/include
 Name: slam3d_sensor_pcl
 Description: Sensor module to handle pointclouds using PCL.
 Version: @SLAM3D_VERSION@
-Requires: slam3d_core
+Requires: slam3d_core pcl_registration-@PCL_VERSION_MAJOR@.@PCL_VERSION_MINOR@
 Libs: -L${libdir} -lslam3d_sensor_pcl
 Cflags: -I${includedir}
