--- a/slam3d/graph/boost/CMakeLists.txt
+++ b/slam3d/graph/boost/CMakeLists.txt
@@ -40,7 +40,7 @@ set_target_properties(graph-boost PROPERTIES OUTPUT_NAME slam3d_graph_boost)
 add_slam3d_library(slam3d_graph_boost)
 
 # Build test
-add_executable(test_boost_graph test.cpp)
+add_executable(test_boost_graph BoostGraphTest.cpp)
 target_link_libraries(test_boost_graph Boost::unit_test_framework graph-boost)
 target_compile_definitions(test_boost_graph PRIVATE -DBOOST_TEST_DYN_LINK)
 add_test(boost_graph test_boost_graph)
