--- a/slam3d/sensor/CMakeLists.txt
+++ b/slam3d/sensor/CMakeLists.txt
@@ -1,2 +1,8 @@
 add_subdirectory(pcl)
-add_subdirectory(pointmatcher)
+
+find_package(libpointmatcher 1.3.1)
+if(LIBPOINTMATCHER_INCLUDE_DIRS)
+	add_subdirectory(pointmatcher)
+else()
+	message(WARNING, "Library pointmatcher not found, the module will be excluded from the build.")
+endif()
