--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ project(SLAM3D VERSION "2.0.0")
 enable_testing()
 
 # Find all dependencies
+find_package(PkgConfig REQUIRED)
 find_package(Eigen3 REQUIRED)
 if (NOT TARGET Eigen3::Eigen)
 	add_library(Eigen3::Eigen INTERFACE IMPORTED)
@@ -15,6 +16,7 @@ endif ()
 find_package(Boost REQUIRED COMPONENTS thread graph unit_test_framework)
 find_package(PCL 1.7 REQUIRED COMPONENTS registration)
 find_package(g2o REQUIRED)
+pkg_check_modules(flann REQUIRED IMPORTED_TARGET flann)
 
 # Define a global property to hold all libraries. This can be
 # used to create a pkg-config file for all of SLAM3D.
