--- a/slam3d/core/CMakeLists.txt
+++ b/slam3d/core/CMakeLists.txt
@@ -12,7 +12,10 @@ target_include_directories(core
 		$<INSTALL_INTERFACE:include>
 )
 
-target_link_libraries(core PUBLIC Eigen3::Eigen ${FLANN_LIBRARIES})
+target_link_libraries(core
+	PUBLIC
+		Eigen3::Eigen
+		PkgConfig::flann)
 
 target_compile_features(core PUBLIC cxx_alias_templates)
 
