--- a/slam3d.project
+++ b/slam3d.project
@@ -143,6 +143,8 @@
         <File Name="slam3d/solver/g2o/G2oSolverTest.cpp"/>
         <File Name="slam3d/solver/g2o/edge_position_prior.h"/>
         <File Name="slam3d/solver/g2o/edge_position_prior.cpp"/>
+        <File Name="slam3d/solver/g2o/edge_distance.h"/>
+        <File Name="slam3d/solver/g2o/edge_distance.cpp"/>
       </VirtualDirectory>
     </VirtualDirectory>
     <VirtualDirectory Name="graph">
