Use fork of libpointmatcher.

--- a/slam3d/sensor/CMakeLists.txt
+++ b/slam3d/sensor/CMakeLists.txt
@@ -1,7 +1,7 @@
 add_subdirectory(pcl)
 
 find_package(libpointmatcher 1.3.1)
-if(LIBPOINTMATCHER_INCLUDE_DIRS)
+if(libpointmatcher_FOUND)
 	add_subdirectory(pointmatcher)
 else()
 	message(WARNING, "Library 'pointmatcher' not found, the module will be excluded from the build.")
