--- a/package.xml
+++ b/package.xml
@@ -17,6 +17,7 @@
 	<build_depend>suitesparse</build_depend>
 	<build_depend>eigen</build_depend>
 	<build_depend>boost</build_depend>
+	<build_depend>libpointmatcher</build_depend>
 
 	<run_depend>libpcl-all</run_depend>
 	<run_depend>catkin</run_depend>
@@ -24,6 +25,7 @@
 	<run_depend>suitesparse</run_depend>
 	<run_depend>eigen</run_depend>
 	<run_depend>boost</run_depend>
+	<run_depend>libpointmatcher</run_depend>
 
 	<export>
 		<build_type>cmake</build_type>
