Add boost_thread in pkg-config.

--- a/slam3d/core/slam3d_core.pc.in
+++ b/slam3d/core/slam3d_core.pc.in
@@ -7,5 +7,5 @@ Name: slam3d_core
 Description: Core components of the SLAM3D library.
 Version: @SLAM3D_VERSION@
 Requires: eigen3 flann
-Libs: -L${libdir} -lslam3d_core
+Libs: -L${libdir} -lslam3d_core -lboost_thread
 Cflags: -I${includedir}
