For jsoncpp, fall back to pkgconfig if cmake config fails
i would think that jsoncpp is understood as a target, and thus should
provide jsoncpp_lib for the cmake config version, and jsoncpp for the
pkgconfig version.

--- a/slam3d/sensor/rtls_flares/CMakeLists.txt
+++ b/slam3d/sensor/rtls_flares/CMakeLists.txt
@@ -10,7 +10,7 @@ target_include_directories(sensor-rtls
 )
 
 target_link_libraries(sensor-rtls
-	PUBLIC core jsoncpp_lib
+	PUBLIC core jsoncpp
 )
 
 # Install header files
