Set position independent code for all libs.

--- a/slam3d/core/CMakeLists.txt
+++ b/slam3d/core/CMakeLists.txt
@@ -40,5 +40,9 @@ install(
 	DESTINATION lib/pkgconfig
 )
 
-set_target_properties(core PROPERTIES OUTPUT_NAME slam3d_core)
+set_target_properties(core PROPERTIES
+	OUTPUT_NAME slam3d_core
+	POSITION_INDEPENDENT_CODE ON
+)
+
 add_slam3d_library(slam3d_core)
