--- a/slam3d/graph/boost/CMakeLists.txt
+++ b/slam3d/graph/boost/CMakeLists.txt
@@ -36,7 +36,11 @@ install(
 	DESTINATION lib/pkgconfig
 )
 
-set_target_properties(graph-boost PROPERTIES OUTPUT_NAME slam3d_graph_boost)
+set_target_properties(graph-boost PROPERTIES
+	OUTPUT_NAME slam3d_graph_boost
+	POSITION_INDEPENDENT_CODE ON
+)
+
 add_slam3d_library(slam3d_graph_boost)
 
 # Build test
