--- a/slam3d/sensor/pointmatcher/CMakeLists.txt
+++ b/slam3d/sensor/pointmatcher/CMakeLists.txt
@@ -35,5 +35,9 @@ install(
 	DESTINATION lib/pkgconfig
 )
 
-set_target_properties(sensor-pointmatcher PROPERTIES OUTPUT_NAME slam3d_sensor_pointmatcher)
+set_target_properties(sensor-pointmatcher PROPERTIES
+	OUTPUT_NAME slam3d_sensor_pointmatcher
+	POSITION_INDEPENDENT_CODE ON
+)
+
 add_slam3d_library(slam3d_sensor_pointmatcher)
