--- a/package.xml
+++ b/package.xml
@@ -18,6 +18,7 @@
 	<build_depend>eigen</build_depend>
 	<build_depend>boost</build_depend>
 	<build_depend>libpointmatcher</build_depend>
+	<build_depend>pclomp</build_depend>
 
 	<run_depend>libpcl-all</run_depend>
 	<run_depend>catkin</run_depend>
