--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package>
+<package format="3">
 
 	<name>slam3d</name>
 	<version>2.5.0</version>
@@ -12,21 +12,12 @@
 
 	<buildtool_depend>cmake</buildtool_depend>
 
-	<build_depend>libpcl-all-dev</build_depend>
-	<build_depend>libg2o</build_depend>
-	<build_depend>suitesparse</build_depend>
-	<build_depend>eigen</build_depend>
-	<build_depend>boost</build_depend>
-	<build_depend>libpointmatcher</build_depend>
-	<build_depend>pclomp</build_depend>
-
-	<run_depend>libpcl-all</run_depend>
-	<run_depend>catkin</run_depend>
-	<run_depend>libg2o</run_depend>
-	<run_depend>suitesparse</run_depend>
-	<run_depend>eigen</run_depend>
-	<run_depend>boost</run_depend>
-	<run_depend>libpointmatcher</run_depend>
+	<depend>libpcl-all-dev</depend>
+	<depend>g2o</depend>
+	<depend>suitesparse</depend>
+	<depend>eigen</depend>
+	<depend>boost</depend>
+	<depend>libpointmatcher</depend>
 
 	<export>
 		<build_type>cmake</build_type>
