--- a/slam3d/sensor/pcl/CMakeLists.txt
+++ b/slam3d/sensor/pcl/CMakeLists.txt
@@ -13,6 +13,7 @@ target_link_libraries(sensor-pcl
 	PUBLIC
 		core
 	PRIVATE
+		${PCL_REGISTRATION_LIBRARIES}
 		${PCL_SAMPLE_CONCENSUS_LIBRARIES}
 )
 
