rework query class, add neo4j position to vertex

--- a/slam3d/graph/neo4j/CMakeLists.txt
+++ b/slam3d/graph/neo4j/CMakeLists.txt
@@ -2,6 +2,7 @@
 
 	add_library(graph-neo4j SHARED
 		Neo4jGraph.cpp
+		Neo4jQuery.cpp
 	)
 
 	target_include_directories(graph-neo4j
@@ -21,7 +22,7 @@
 
 	# Install header files
 	install(
-		FILES Neo4jGraph.hpp
+		FILES Neo4jGraph.hpp Neo4jQuery.hpp
 		DESTINATION include/slam3d/graph/neo4j/
 	)
 
