--- a/slam3d/graph/neo4j/CMakeLists.txt
+++ b/slam3d/graph/neo4j/CMakeLists.txt
@@ -4,6 +4,7 @@
 		Neo4jGraph.cpp
 		Neo4jQuery.cpp
 		Neo4jConversion.cpp
+		RedisMap.cpp
 	)
 
 	target_include_directories(graph-neo4j
@@ -19,11 +20,15 @@
 			cpprest
 			crypto
 			core
+			hiredis
 	)
 
 	# Install header files
 	install(
-		FILES Neo4jGraph.hpp Neo4jQuery.hpp Neo4jConversion.hpp
+		FILES 	Neo4jGraph.hpp 
+				Neo4jQuery.hpp
+				Neo4jConversion.hpp
+				RedisMap.hpp
 		DESTINATION include/slam3d/graph/neo4j/
 	)
 
@@ -47,6 +52,7 @@
 
 	# Build test
 	add_executable(test_neo4j_graph Neo4jGraphTest.cpp)
-	target_link_libraries(test_neo4j_graph Boost::unit_test_framework graph-neo4j)
+	add_dependencies(test_neo4j_graph sensor-pcl)
+	target_link_libraries(test_neo4j_graph Boost::unit_test_framework graph-neo4j sensor-pcl)
 	target_compile_definitions(test_boost_graph PRIVATE BOOST_TEST_DYN_LINK)
 	add_test(neo4j_graph test_neo4j_graph)
